--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,5 @@
 # API URL for development
-REACT_APP_API_URL=http://localhost:8080
+REACT_APP_API_BASE_URL=http://localhost:8080
 
 # For production, set this to your deployed backend URL, e.g.:
-# REACT_APP_API_URL=https://your-einvoice-api.onrender.com 
+# REACT_APP_API_BASE_URL=https://your-api-name.com 
